# Algorithms

./: CMakeLists.txt
algorithms/: CMakeLists.txt
algorithms/include/algorithms/: binarySearch.hpp  mathFunctions.hpp  sortAlgorithms.hpp
application/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  binarySearch_tests.cpp  mathFunctions_tests.cpp  sortAlgorithms_tests.cpp
